feat: Add Export All Role Rules functionality
- Added exportAllRoleRules command in registerCommands.ts
- Added exportAllRoleRules message type in WebviewMessage.ts
- Added message handler in webviewMessageHandler.ts
- Added 'Export All Role Rules' button in ModesView.tsx
- Added translations for English and Russian
- Exports all role rules from .roo folder to project workspace
- Enables version control and customization of rule files

--- a/ai_ide_bas_main/webview-ui/src/i18n/locales/en/prompts.json
+++ b/ai_ide_bas_main/webview-ui/src/i18n/locales/en/prompts.json
@@ -57,6 +57,11 @@
 		"description": "Export this mode with rules from the .roo/rules-{{slug}}/ folder combined into a shareable YAML file. The original files remain unchanged.",
 		"exporting": "Exporting..."
 	},
+	"exportAllRoleRules": {
+		"title": "Export All Role Rules",
+		"description": "Export all role rules from all modes to project .roo folder for customization and version control.",
+		"success": "All role rules have been exported to the project .roo folder"
+	},
 	"importMode": {
 		"selectLevel": "Choose where to import this mode:",
 		"import": "Import",
