--- a/ai_ide_bas_main/webview-ui/src/i18n/locales/ru/prompts.json
+++ b/ai_ide_bas_main/webview-ui/src/i18n/locales/ru/prompts.json
@@ -58,6 +58,11 @@
 		"export": "Экспортировать режим",
 		"exporting": "Экспорт..."
 	},
+	"exportAllRoleRules": {
+		"title": "Экспорт всех правил ролей",
+		"description": "Экспортировать все правила ролей из всех режимов в папку .roo проекта для кастомизации и контроля версий.",
+		"success": "Все правила ролей экспортированы в папку .roo проекта"
+	},
 	"globalCustomInstructions": {
 		"title": "Пользовательские инструкции для всех режимов",
 		"description": "Эти инструкции применяются ко всем режимам. Они задают базовое поведение, которое можно расширить с помощью инструкций ниже. <0>Узнать больше</0>",
