feat: Update export button text to 'Экспортировать правила'
- Updated Russian translation from 'Экспорт всех правил ролей' to 'Экспортировать правила'
- Updated English translation from 'Export All Role Rules' to 'Export Rules'
- Shorter, cleaner button text for better UX

--- a/ai_ide_bas_main/webview-ui/src/i18n/locales/en/prompts.json
+++ b/ai_ide_bas_main/webview-ui/src/i18n/locales/en/prompts.json
@@ -58,7 +58,7 @@
 		"exporting": "Exporting..."
 	},
 	"exportAllRoleRules": {
-		"title": "Export All Role Rules",
+		"title": "Export Rules",
 		"description": "Export all role rules from all modes to project .roo folder for customization and version control.",
 		"success": "All role rules have been exported to the project .roo folder"
 	},
