--- a/ai_ide_bas_main/webview-ui/src/i18n/locales/ru/prompts.json
+++ b/ai_ide_bas_main/webview-ui/src/i18n/locales/ru/prompts.json
@@ -59,7 +59,7 @@
 		"exporting": "Экспорт..."
 	},
 	"exportAllRoleRules": {
-		"title": "Экспорт всех правил ролей",
+		"title": "Экспортировать правила",
 		"description": "Экспортировать все правила ролей из всех режимов в папку .roo проекта для кастомизации и контроля версий.",
 		"success": "Все правила ролей экспортированы в папку .roo проекта"
 	},
