--- a/ai_ide_bas_main/webview-ui/src/i18n/locales/en/settings.json
+++ b/ai_ide_bas_main/webview-ui/src/i18n/locales/en/settings.json
@@ -253,6 +253,8 @@
 		"getChutesApiKey": "Get Chutes API Key",
 		"deepSeekApiKey": "DeepSeek API Key",
 		"getDeepSeekApiKey": "Get DeepSeek API Key",
+		"myDeepSeekApiKey": "My DeepSeek API Key",
+		"myDeepSeekBaseUrl": "My DeepSeek Base URL",
 		"moonshotApiKey": "Moonshot API Key",
 		"getMoonshotApiKey": "Get Moonshot API Key",
 		"moonshotBaseUrl": "Moonshot Entrypoint",
